Fix trigger in CI

--- a/.github/workflows/Ubuntu-latest.yml
+++ b/.github/workflows/Ubuntu-latest.yml
@@ -1,12 +1,12 @@
 # This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
 name: Test on Ubuntu Linux
-on: workflow_dispatch
 on:
   push:
     branches: [ "master", "dev-new"]
   pull_request:
     branches: [ "master", "dev-new"]
+  workflow_dispatch:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
