--- a/.github/workflows/Ubuntu-latest.yml
+++ b/.github/workflows/Ubuntu-latest.yml
@@ -13,7 +13,7 @@ env:
   BUILD_TYPE: Release
   COMET_SRC: ${{github.workspace}}
   COMETPY_COMET_PATH: ${{github.workspace}}/build/comet/
-  COMETPY_LLVM_PATH: ${{github.workspace}}/build/llvm/
+  COMETPY_LLVM_PATH: ${{github.workspace}}/build/llvm/src/llvm-build
 jobs:
   build-comet-and-dependencies:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
@@ -33,6 +33,7 @@ jobs:
       # if: always()
       with:
         path: |
+          ${{github.workspace}}/llvm
           ${{github.workspace}}/build/llvm
           ${{github.workspace}}/build/blis
         key: ${{ runner.os }}-submodules
@@ -64,6 +65,7 @@ jobs:
       # if: always()
       with:
         path: |
+          ${{github.workspace}}/llvm
           ${{github.workspace}}/build/llvm
           ${{github.workspace}}/build/blis
         key: ${{ runner.os }}-submodules
@@ -71,7 +73,7 @@ jobs:
     - name: Build COMET
       working-directory: ${{github.workspace}}/build/
       # Build your program with the given configuration
-      run: cmake .. -DLLVM_CUSTOM_BUILD_PATH=${{github.workspace}}/build/llvm -DCMAKE_BUILD_TYPE=Release && make
+      run: cmake .. -DLLVM_CUSTOM_BUILD_PATH=${{github.workspace}}/build/llvm/src/llvm-build -DCMAKE_BUILD_TYPE=Release && make
     
     - name: Initialize Python 3.11
       uses: actions/setup-python@v4
@@ -134,6 +136,7 @@ jobs:
       # if: always()
       with:
         path: |
+          ${{github.workspace}}/llvm
           ${{github.workspace}}/build/llvm
           ${{github.workspace}}/build/blis
         key: ${{ runner.os }}-submodules
@@ -151,7 +154,7 @@ jobs:
     - name: Build COMET
       working-directory: ${{github.workspace}}/build/
       # Build your program with the given configuration
-      run: cmake .. -DLLVM_CUSTOM_BUILD_PATH=${{github.workspace}}/build/llvm -DCMAKE_BUILD_TYPE=Release && make
+      run: cmake .. -DLLVM_CUSTOM_BUILD_PATH=${{github.workspace}}/build/llvm/src/llvm-build -DCMAKE_BUILD_TYPE=Release && make
 
       
     - name: Setup cometPy
